fix scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1518,9 +1518,23 @@ li.no-underline a:hover::after{text-decoration:none; border:none!important;}
 
  .modal-open{
    padding-right:0 !important;
-   overflow-y: auto;
+   /* overflow-y: auto; */
+   overflow-y: hidden;
  } 
 button.btn.btn-danger.btn-add-cart {
     height: 50px;
     line-height: .5;
+}
+.product-top.fixed + .product-content .product-content-left,
+.product-top.fixed + .product-content .product-content-right {
+  margin-top:95px;
+}
+::-webkit-scrollbar {
+  right:0;
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
 }
